; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_hashdescr.c__PyArray_DescrHashImp.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_hashdescr.c__PyArray_DescrHashImp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PyExc_SystemError = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @_PyArray_DescrHashImp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_PyArray_DescrHashImp(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = call i32* @PyList_New(i32 0)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %41

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @_array_descr_walk(i32* %14, i32* %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @Py_DECREF(i32* %20)
  store i32 -1, i32* %3, align 4
  br label %41

22:                                               ; preds = %13
  %23 = load i32*, i32** %6, align 8
  %24 = call i32* @PyList_AsTuple(i32* %23)
  store i32* %24, i32** %7, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @Py_DECREF(i32* %25)
  %27 = load i32*, i32** %7, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %22
  store i32 -1, i32* %3, align 4
  br label %41

30:                                               ; preds = %22
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @PyObject_Hash(i32* %31)
  %33 = load i32*, i32** %5, align 8
  store i32 %32, i32* %33, align 4
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @Py_DECREF(i32* %34)
  %36 = load i32*, i32** %5, align 8
  %37 = load i32, i32* %36, align 4
  %38 = icmp eq i32 %37, -1
  br i1 %38, label %39, label %40

39:                                               ; preds = %30
  store i32 -1, i32* %3, align 4
  br label %41

40:                                               ; preds = %30
  store i32 0, i32* %3, align 4
  br label %41

41:                                               ; preds = %40, %39, %29, %19, %12
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32* @PyList_New(i32) #1

declare dso_local i32 @_array_descr_walk(i32*, i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32* @PyList_AsTuple(i32*) #1

declare dso_local i32 @PyObject_Hash(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
